polish for first presentation

--- a/custom-dark.scss
+++ b/custom-dark.scss
@@ -35,6 +35,16 @@ $mermaid-label-bg-color: $accent2 !default;
 
 
 /*-- scss:rules --*/
+.footer {
+  bottom: 10px !important;
+  //color: #58748f !important;
+}
+
+.reveal .progress {
+    top: 0 !important;
+    height: 2% !important;
+    background-color: #4C4E52//#273b50; 
+}
 
 .reveal .slide a:hover {
   text-decoration: underline;
@@ -280,7 +290,7 @@ $mermaid-label-bg-color: $accent2 !default;
 
 .reveal .slide-menu-button {
   position: fixed;
-  top: 6px;
+  top: 10px;
   right: 0;
   display: flex;
   justify-content: flex-end;
